# Practise

./: .env.template  .pre-commit-config.yaml  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: 2d06748c5fe8_initial_migration.py  3fea8cece7fc_create_users_table.py
practise/: app.py  asgi.py  environment.py
practise/api/: routes.py
practise/db/: database_engine_factory.py  database_executor.py
practise/models/: users.py
practise/services/: process_user.py
scripts/: run_app.sh
